@@ -1150,7 +1150,9 @@ public class DocumentManager extends Dialog {
 			}
 		});
 		
-		
+		MenuItem movePagesByFilelist = new MenuItem(contextMenu, 0);
+		movePagesByFilelist.setText("Sort pages by filename list...");
+		SWTUtil.onSelectionEvent(movePagesByFilelist, e -> mw.movePagesByFilelist());
 	}
 
 	private void addMenuItems4PageLevel(Menu contextMenu, String[] editStatusArray) {
