@@ -635,4 +635,5 @@ CHANGES AND BUGFIXES
 	-> P2PaLA recognition functionality for pre-trained models under ToolsWidget->Other Tools
 	-> fix image exif orientation bug for MacOS, see bug TranskribusSwtGui#276
 	-> simplified Text2Image tool (without training step) integrated in ToolsWidget->Other Tools 
+	-> add feature to move pages of document by image filename list; start either via Main Menu->Document or the Document-Manager context menu on a loaded document
 	
